--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "cross-env": "^7.0.3",
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.7.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "winston": "^3.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
