--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     },
     "incremental": true,
     "skipLibCheck": true,
+    "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
@@ -22,3 +23,4 @@
   }
   
 }
+
