--- a/config/development.yaml
+++ b/config/development.yaml
@@ -1,8 +1,9 @@
 db:
   host: "localhost"
   username: "root"
-  password: "root"
-  synchronnize: true
+  password: "1234"
+  synchronnize: false
 
 jwt:
   secret: "Secret1234"
+  refresh_secret: "Refresh1234"
