--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json "
+    "test:e2e": "jest --config ./test/jest-e2e.json ",
+    "migration:create": "typeorm migration:create src/database/migrations/migration",
+    "migration:run": "typeorm -d src/database/migrations/migration migration:run",
+    "migration:revert": "typeorm -d src/database/migrations/migration migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^9.2.0",
