--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json ",
     "migration:create": "typeorm migration:create src/database/migrations/migration",
-    "migration:run": "typeorm -d src/database/migrations/migration migration:run",
+    "migration:generate": "typeorm migration:generate -d src/database/migrations/migration -n",
+    "migration:run": "typeorm -d src/database/migrations/ migration:run",
     "migration:revert": "typeorm -d src/database/migrations/migration migration:revert"
   },
   "dependencies": {
@@ -31,7 +32,10 @@
     "@nestjs/mapped-types": "^1.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.2.0",
+    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/serve-static": "^3.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/cron": "^2.0.0",
     "@types/passport-jwt": "^3.0.7",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -41,14 +45,19 @@
     "cross-env": "^7.0.3",
     "joi": "^17.7.0",
     "mysql2": "^2.3.3",
+    "nest-puppeteer": "^1.1.1",
     "nest-winston": "^1.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
+    "puppeteer": "13.6.0",
+    "puppeteer-core": "19.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
     "typeorm": "^0.3.10",
-    "winston": "^3.8.2"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.1.5",
@@ -58,7 +67,9 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "@types/puppeteer": "^7.0.4",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "eslint": "^8.27.0",
