--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 NODE_ENV=development
-PORT=3000
+PORT=8080
 DB_PORT=3306
 DB_DATABASE=test
 DB_HOST=localhost
@@ -10,4 +10,4 @@ JWT_SECRET=Secret1234
 JWT_REFRESH_SECRET=ReSecret1234
 AUTH_EXPPIRESIN=2h
 REFRESH_EXPPIRESIN=7d
- 
+TZ=Asia/Seoul 
