--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,6 @@
 {
-  "semi": true,
+  "singleQuote": true,
   "trailingComma": "all",
-  "singleQuote": false,
-  "printWidth": 180,
-  "tabWidth": 2,
-  "arrowParens": "avoid"
+  "semi": true,
+  "tabWidth": 2
 }
