--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "nest-winston": "^1.8.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "puppeteer": "13.6.0",
-    "puppeteer-core": "19.2.0",
+    "puppeteer": "^13.6.0",
+    "puppeteer-core": "^19.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.7",
