--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 NODE_ENV=development
-PORT=8080
+PORT=8000
 DB_PORT=3306
 DB_DATABASE=test
 DB_HOST=localhost
 DB_USERNAME=root
 DB_PASSWORD=1234
-DB_SYNCHRONIZE=false
+DB_SYNCHRONIZE=true
 JWT_SECRET=Secret1234
 JWT_REFRESH_SECRET=ReSecret1234
 AUTH_EXPPIRESIN=2h
