--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/cron": "^2.0.0",
     "@types/passport-jwt": "^3.0.7",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "config": "^3.3.8",
